# pmlxzj_unlocker

./: .gitignore  CMakeLists.txt  README.MD  cmd_disable_audio.c  cmd_extract_audio.c  cmd_info.c  cmd_unlock_exe.c  main.c  pmlxzj.c  pmlxzj.h  pmlxzj_audio.c  pmlxzj_audio_aac.h  pmlxzj_commands.h  pmlxzj_enum_names.h  pmlxzj_frame.c  pmlxzj_utils.h  pmlxzj_win32.h  str_48c47e.c  utils.h
.github/workflows/: build-mingw.yml  build-msys2.yml
cmake/: mingw-w64-x86_64.cmake
docs/: exe_player_spec.adoc  exe_player_spec.md
